--- a/myblog/templates/blog/about.html
+++ b/myblog/templates/blog/about.html
@@ -10,12 +10,12 @@
 <meta property="og:title" content="About - Sujin Lee" />
 <meta property="og:description" content="Creative Developer" />
 <meta property="og:image" content="http://www.sujinlee.me/image/background/profile-about.png" />
-<meta property="og:url" content="http://www.sujinlee.me/project/" />
+<meta property="og:url" content="http://www.sujinlee.me/about/" />
 
 {% endblock %}
 {% block content %}
 <header class="page_title">
-  <h1> PROJECT</h1>
+  <h1>about</h1>
 </header>
 
 <div id="main_content">
