--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -42,7 +42,7 @@
   <footer class="share_container">
     <ul>
       <li>
-        <div class="btn_like post-likes" data-post-id="{{post.id}}">
+        <div class="btn_like blog-like" data-post-id="{{post.id}}">
           {% if liked %}
           <span class="show_like icon-heart"></span>
           <span class="show_unlike icon-heart" style="display: none"></span>
