--- a/myblog/static/src/scss/style.scss
+++ b/myblog/static/src/scss/style.scss
@@ -10,15 +10,10 @@ $theme-col: #4B21FF;
 $accent-col: #E73E85;
 $bg-col: #fff;
 $black: #232528;
+$black-code: #282a36;
 $dark-gray: #656c7a;
-$light-gray: rgba(0,
-0,
-0,
-.05);
-$light-gray-hover: rgba(0,
-0,
-0,
-.1);
+$light-gray: rgba(0,0,0,.05);
+$light-gray-hover: rgba(0,0,0,0.1);
 /* --- layout --- */
 
 $page_margin_reset: 0%;
@@ -224,7 +219,7 @@ img {
 .line_2,
 .line_3 {
     width: 100%;
-    height: 3px;
+    height: 4px;
     background: $black;
     margin-bottom: 0.4rem;
     backface-visibility: hidden;
@@ -241,7 +236,7 @@ img {
 }
 ._active .line_3 {
     background: #fff;
-    transform: rotate(-45deg) translate(8px, -8px);
+    transform: rotate(-45deg) translate(9px, -9px);
 }
 f .btn_blog {
     margin-right: 1vh;
@@ -250,6 +245,7 @@ f .btn_blog {
 .ico_menu {
     font-size: 3.2rem;
     line-height: 2rem;
+    margin: -0.3vh;
 }
 /* navigation menu effect */
 
@@ -303,7 +299,7 @@ footer {
     }
     ul:nth-child(1) {
         li {
-            width: 3rem;
+            width: 3.0rem;
         }
     }
     ul:nth-child(2) {
@@ -385,6 +381,7 @@ span.show_unlike.icon-heart {
     max-height: 45vh;
     min-height: 200px;
     padding-bottom: $page_margin * 2;
+    cursor: pointer;
 }
 .project_ele a,
 #lst_wrap_blog a {
@@ -467,6 +464,7 @@ span.show_unlike.icon-heart {
     padding: $page_margin;
     display: flex;
     cursor: pointer;
+    a {}
     // a {   display: block;}
 }
 .blog_ele header {
@@ -548,4 +546,24 @@ article {
     margin: $page_margin/2 0;
     float: right;
     font-size: 0.9rem;
+}
+
+// form
+.form_wrap {
+    width: 100%;
+    display: flex;
+    form {
+        width: 50%;
+    }
+
+    button {
+        color: $theme-col;
+        font-size: 1.3rem;
+    }
+}
+
+
+.form_view {
+    width: 50%;
+    background: $black;
 }
