--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -93,6 +93,7 @@
     <script src="//sujinlee.disqus.com/count.js" id="dsq-count-scr" async></script>
     <!-- javascript -->
     <script src="{% static 'src/js/script.js' %}"></script>
+    <script src="{% static 'src/js/prefixfree.min.js' %}"></script>
     <script src="{% static 'src/js/highlight.pack.js' %}"></script>
     <script src="{% static 'src/js/social.js' %}"></script>
     <!-- build:js -->
