--- a/myblog/templates/blog/index.html
+++ b/myblog/templates/blog/index.html
@@ -3,14 +3,15 @@
 
 {% block ogtags %}
 <meta property="og:type" content="Sujin Lee:Post" />
-<meta property="og:title" content="Blog - Sujin Lee" />
-<meta property="og:description" content="Creative Developer" />
+<meta property="og:title" content="Sujin Lee | Creative Developer" />
+<meta property="og:description" content="Personal Website" />
 <meta property="og:image" content="http://www.sujinlee.me/image/background/profile-about.png" />
-<meta property="og:url" content="http://www.sujinlee.me/project/" />
+<meta property="og:url" content="http://www.sujinlee.me/" />
 {% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'src/css/index.css' %}">
+
 <div class="home_img">
 <img src="{% static 'image/background/profile-about.png' %}" alt="profile" >
 </div>
